# crawler

./: README.md  main.ipynb  main.py  pyproject.toml
utils/: bs4crawl.py
