[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "flask-restx>=1.3.2",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
]
